--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-autoprefixer": "~2.1.0",
     "gulp-jade": "~0.10.0",
     "gulp-concat": "~2.4.3",
-    "gulp-uglify": "~1.0.2"
+    "gulp-uglify": "~1.0.2",
+    "gulp-react": "~2.0.0"
   }
 }
